--- a/WolvenKit/Views/Editors/BulkEditor/BulkEditorView.xaml
+++ b/WolvenKit/Views/Editors/BulkEditor/BulkEditorView.xaml
@@ -1,30 +1,16 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.BulkEditor.BulkEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:hc="https://handyorg.github.io/handycontrol">
-
-    <catel:UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <hc:ThemeResources/>
-                <hc:Theme/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </catel:UserControl.Resources>
-
+                   xmlns:catel="http://schemas.catelproject.com">
 
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <hc:PropertyGrid Width="400" Height="300"></hc:PropertyGrid>
-
-            <Grid >
-                <Button Width="150" Content="Run"/>
-
-                <hc:WaveProgressBar HorizontalAlignment="Right" Margin="0,15,0,0"></hc:WaveProgressBar>
-            </Grid>
-         
-        </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        
+        <Label Grid.Row="0" Content="{Binding Title}" />
+        <Label Grid.Row="1" Content="Here goes your real content" />
     </Grid>
-
+    
 </catel:UserControl>
