--- a/WolvenKit/Views/Editors/CsvEditor/CsvEditorView.xaml
+++ b/WolvenKit/Views/Editors/CsvEditor/CsvEditorView.xaml
@@ -1,36 +1,16 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.CsvEditor.CsvEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:hc="https://handyorg.github.io/handycontrol">
+                   xmlns:catel="http://schemas.catelproject.com">
 
-    <catel:UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <hc:ThemeResources/>
-                <hc:Theme/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </catel:UserControl.Resources>
-
-
-    <Grid Width="790" Height="390">
-        <StackPanel Orientation="Vertical">
-
-            <StackPanel Orientation="Horizontal" >
-                <Button Margin="0,5,5,5" Width="150" Content="Save"/>
-                <Button Margin="5" Width="150" Content="Export Csv"/>
-                <Button Margin="5" Width="150" Content="Import Csv"/>
-
-
-            </StackPanel>
-            <Grid Height="360">
-                <hc:TextBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-
-                </hc:TextBox>
-            </Grid>
-
-        </StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        
+        <Label Grid.Row="0" Content="{Binding Title}" />
+        <Label Grid.Row="1" Content="Here goes your real content" />
     </Grid>
-
+    
 </catel:UserControl>
