--- a/WolvenKit/Views/Editors/EditorBars/ByteArrayEditorView.xaml
+++ b/WolvenKit/Views/Editors/EditorBars/ByteArrayEditorView.xaml
@@ -1,26 +1,16 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.EditorBars.ByteArrayEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:hc="https://handyorg.github.io/handycontrol">
-
-    <catel:UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <hc:ThemeResources/>
-                <hc:Theme/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </catel:UserControl.Resources>
-
+                   xmlns:catel="http://schemas.catelproject.com">
 
     <Grid>
-        <StackPanel Orientation="Horizontal">
-            <Button Width="75" Margin="2" Content="Export"/>
-            <Button Width="75" Margin="2" Content="Import"/>
-            <Button Width="75" Margin="2" Content="Open"/>
-            <TextBlock VerticalAlignment="Center"    Text="-" Width="320"/>
-        </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        
+        <Label Grid.Row="0" Content="{Binding Title}" />
+        <Label Grid.Row="1" Content="Here goes your real content" />
     </Grid>
-
+    
 </catel:UserControl>
