--- a/WolvenKit/Views/Editors/EditorBars/PtrEditorView.xaml
+++ b/WolvenKit/Views/Editors/EditorBars/PtrEditorView.xaml
@@ -1,24 +1,16 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.EditorBars.PtrEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:hc="https://handyorg.github.io/handycontrol">
-
-    <catel:UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <hc:ThemeResources/>
-                <hc:Theme/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </catel:UserControl.Resources>
-
+                   xmlns:catel="http://schemas.catelproject.com">
 
     <Grid>
-        <StackPanel Orientation="Horizontal">
-            <hc:TextBox Width="250" hc:InfoElement.TitleWidth="50" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Type" Text=""/>
-            <hc:TextBox Margin="15,0,0,0" Width="400" hc:InfoElement.TitleWidth="50" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Handle"  Text=""/>
-        </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        
+        <Label Grid.Row="0" Content="{Binding Title}" />
+        <Label Grid.Row="1" Content="Here goes your real content" />
     </Grid>
-
+    
 </catel:UserControl>
