--- a/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
@@ -6,45 +6,37 @@
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    IsVisibleChanged="UserControl_IsVisibleChanged">
 
-    <catel:UserControl.Resources>
-        <ResourceDictionary>
-            <Style x:Key="CoverFlowBaseStyle2" TargetType="hc:CoverFlow">
-                <Setter Property="Focusable" Value="False"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="hc:CoverFlow">
-                            <Border  BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
-                                <Viewport3D  x:Name="PART_Viewport3D">
-                                    <Viewport3D.Camera>
-                                        <PerspectiveCamera  x:Name="PART_Camera" Position="0,0,3" UpDirection="0,1,0" LookDirection="0,0,-1" FieldOfView="80"/>
-                                    </Viewport3D.Camera>
-                                    <Viewport3D.Children>
-                                        <ModelVisual3D>
-                                            <ModelVisual3D.Content>
-                                                <DirectionalLight Color="White" Direction="1,0,-4" />
-                                            </ModelVisual3D.Content>
-                                        </ModelVisual3D>
-                                        <ModelVisual3D >
+    <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
+        
+        
+        <Grid Margin="3,75,3,0">
 
-                                            <ModelVisual3D.Content>
-                                                <DirectionalLight  Color="White" Direction="-1,0,-4" />
-                                            </ModelVisual3D.Content>
-                                        </ModelVisual3D>
-                                        <ModelVisual3D  x:Name="PART_VisualParent"/>
-                                    </Viewport3D.Children>
-                                </Viewport3D>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </ResourceDictionary>
-    </catel:UserControl.Resources>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
 
-    <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
+            <Button Click="Button_Click"></Button>
+            <Grid Grid.Column="0">
 
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="3*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
 
+                <Grid Grid.Row="1">
+                    <hc:CoverFlow x:Name="CoverFlowMain" Margin="32" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
 
+                </Grid>
+            </Grid>
+        </Grid>      
+        
+        
+        
+        <Grid HorizontalAlignment="Right" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+
+        <Grid HorizontalAlignment="left" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+        <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Orientation="Horizontal">
 
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="Profile"></TextBlock>
@@ -55,157 +47,9 @@
                           Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" PathLength="105" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <hc:AnimationPath.LayoutTransform>
                     <RotateTransform Angle="180"></RotateTransform>
-                </hc:AnimationPath.LayoutTransform>
+                </hc:AnimationPath.LayoutTransform>                
             </hc:AnimationPath>
         </StackPanel>
-
-
-        <Grid Margin="3,75,3,0">
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="160"/>
-                <RowDefinition Height="150"/>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height="1*"/>
-            </Grid.RowDefinitions>
-
-            <Grid Grid.Row="0" Grid.Column="0">
-                <Border Background="{DynamicResource RegionBrush}" Margin="15,0,5,10" CornerRadius="10">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150"/>
-                            <ColumnDefinition Width="*"/>
-
-                        </Grid.ColumnDefinitions>
-                        <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="9" CornerRadius="10">
-
-                        </Border>
-                        <Grid Grid.Column="1"  Margin="0,0,0,0" VerticalAlignment="Center">
-                            <StackPanel>
-                                <Border Height="30"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="0,5,10,5" CornerRadius="5">
-                                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="User"/>
-                                </Border>
-                                <Border Height="30"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="0,5,10,5" CornerRadius="5">
-                                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="User"/>
-                                </Border>
-                                <Border Height="30"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="0,5,10,5" CornerRadius="5">
-                                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="User"/>
-                                </Border>
-                            </StackPanel>
-
-
-
-                        </Grid>
-
-
-                    </Grid>
-
-                </Border>
-            </Grid>
-            <Grid Grid.Row="0" Grid.Column="1">
-                <Border Background="{DynamicResource RegionBrush}" Margin="5,0,15,10" CornerRadius="10">
-                    <Grid FlowDirection="RightToLeft">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150"/>
-                            <ColumnDefinition Width="*"/>
-
-                        </Grid.ColumnDefinitions>
-                        <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="9" CornerRadius="10">
-
-                        </Border>
-                        <Grid Grid.Column="1"  Margin="0,0,0,0" VerticalAlignment="Center">
-                            <StackPanel>
-                                <Border Height="30"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="0,5,10,5" CornerRadius="5">
-                                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="User"/>
-                                </Border>
-                                <Border Height="30"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="0,5,10,5" CornerRadius="5">
-                                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="User"/>
-                                </Border>
-                                <Border Height="30"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Margin="0,5,10,5" CornerRadius="5">
-                                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="User"/>
-                                </Border>
-                            </StackPanel>
-
-
-
-                        </Grid>
-
-                    </Grid>
-                </Border>
-            </Grid>
-
-            <Grid Grid.Row="1" Grid.ColumnSpan="2" >
-                <Border Background="{DynamicResource RegionBrush}" Margin="15,0,15,10" CornerRadius="10">
-
-                </Border>
-
-            </Grid>
-
-            <Grid Grid.Row="2" Grid.ColumnSpan="2"  Grid.RowSpan="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-
-                </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Margin="15,0,5,15" CornerRadius="15" Background="{DynamicResource RegionBrush}">
-
-                    <Border Grid.Column="0" Margin="1,170,1,15"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
-
-
-
-                    </Border>
-
-                </Border>
-                <Border Grid.Column="1" Margin="5,0,5,15" CornerRadius="15" Background="{DynamicResource RegionBrush}">
-                    <Border Grid.Column="0" Margin="1,170,1,15"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
-
-
-
-                    </Border>
-
-
-                </Border>
-                <Border Grid.Column="2" Margin="5,0,15,15" CornerRadius="15" Background="{DynamicResource RegionBrush}">
-                    <Border Grid.Column="0" Margin="1,170,1,15"  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
-
-
-
-                    </Border>
-
-
-                </Border>
-
-                <Grid Margin="15,10,5,15" VerticalAlignment="Top" Height="150" Width="250">
-                    <hc:CoverFlow  Style="{StaticResource CoverFlowBaseStyle2}" x:Name="CoverFlowMain">
-
-                    </hc:CoverFlow>
-                </Grid>
-                <Grid Grid.Column="1" Margin="5,10,5,15" VerticalAlignment="Top" Height="150" Width="250">
-                    <hc:CoverFlow  Style="{StaticResource CoverFlowBaseStyle2}" x:Name="asd3423">
-
-                    </hc:CoverFlow>
-                </Grid>
-                <Grid Grid.Column="2" Margin="5,10,15,15" VerticalAlignment="Top" Height="150" Width="250">
-                    <hc:CoverFlow  Style="{StaticResource CoverFlowBaseStyle2}" x:Name="dsfdsf">
-
-                    </hc:CoverFlow>
-                </Grid>
-
-
-
-            </Grid>
-
-
-
-        </Grid>
-
-
-
 
     </Grid>
 
