--- a/WolvenKit/Views/HomePage/TopicView.xaml
+++ b/WolvenKit/Views/HomePage/TopicView.xaml
@@ -15,7 +15,7 @@
     <hc:TransitioningContentControl TransitionMode="Fade" >
 
         <Grid 
-        hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
+        hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}"
         x:Name="TopicViewer"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center"
@@ -23,6 +23,7 @@
         Margin="35,35,35,35">
 
             <Grid.Children>
+                <pag:WelcomePageView/>
             </Grid.Children>
         </Grid>
     </hc:TransitioningContentControl>
