--- a/WolvenKit/Views/PropertiesView.xaml
+++ b/WolvenKit/Views/PropertiesView.xaml
@@ -8,27 +8,16 @@
              xmlns:viewModels="clr-namespace:WolvenKit.ViewModels"
              xmlns:model="clr-namespace:WolvenKit.Model"
              xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:behavior="clr-namespace:WolvenKit.Behavior" xmlns:hc="https://handyorg.github.io/handycontrol"
-                   mc:Ignorable="d" 
+             xmlns:behavior="clr-namespace:WolvenKit.Behavior"
+             mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" IsVisibleChanged="UserControl_IsVisibleChanged">
-
-
-    <catel:UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <hc:ThemeResources  RequestedTheme="Dark"/>
-                <hc:Theme/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </catel:UserControl.Resources>
-    
     <Grid
         xmlns:conv="clr-namespace:WolvenKit.Layout.Converters">
         <Grid.Resources>
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
         </Grid.Resources>
 
-        <TreeView Name="TreeView" Style="{DynamicResource TreeView}"
+        <TreeView Name="TreeView" 
                              ItemsSource="{Binding Properties}"
                              
                              >
@@ -71,7 +60,7 @@
             </TreeView.ContextMenu>
 
             <TreeView.ItemContainerStyle>
-                <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemBaseStyle}">
+                <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
                     <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
