--- a/WolvenKit/Views/Tools/AssetBrowser/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Tools/AssetBrowser/AssetBrowserView.xaml
@@ -3,7 +3,7 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
-                  xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon" ShowInTaskbar="True" AllowsTransparency="True"  BorderBrush="{x:Null}" WindowStartupLocation="CenterScreen" Width="1200" MinHeight="600" MaxHeight="800" WindowStyle="None" Title="Asset Browser" IsVisibleChanged="DataWindow_IsVisibleChanged" >
+                  xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon" ShowInTaskbar="True" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" BorderBrush="{x:Null}" WindowStartupLocation="CenterScreen" Width="1200" MinHeight="600" MaxHeight="800" WindowStyle="None" Title="Asset Browser" IsVisibleChanged="DataWindow_IsVisibleChanged" >
 
     <catel:DataWindow.Resources>
         <ResourceDictionary>
@@ -16,7 +16,7 @@
         </ResourceDictionary>
 
     </catel:DataWindow.Resources>
-    <Border hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
+    <Border hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
 
         <Grid>
             <Grid.RowDefinitions>
