--- a/WolvenKit/Views/Wizards/ThemeWizardView.xaml
+++ b/WolvenKit/Views/Wizards/ThemeWizardView.xaml
@@ -3,32 +3,26 @@
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:thmPage="clr-namespace:WolvenKit.Views.Wizards.WizardPages.ThemeWizard" IsVisibleChanged="UserControl_IsVisibleChanged">
 
-    <catel:UserControl.Resources>
-        <ResourceDictionary>
-
-        </ResourceDictionary>
-    </catel:UserControl.Resources>
-
-    <Grid MinWidth="400" MinHeight="600" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,5,2,5">
+    <Grid MinWidth="300" MinHeight="300" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5,5,2,5">
 
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="15*"/>
             <RowDefinition Height="90*"/>
+            <RowDefinition Height="10*"/>
 
         </Grid.RowDefinitions>
 
-        <StackPanel VerticalAlignment="Top" Orientation="Horizontal" HorizontalAlignment="Left" Margin="5,0,5,0">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="5,0,5,0">
             <Grid>
-                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Hubot" Spin="False" SpinAutoReverse="False" Height="50" Width="50" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Hubot" Spin="False" SpinAutoReverse="False" Height="50" Width="50" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
 
             </Grid>
 
             <StackPanel  VerticalAlignment="Bottom" Orientation="Vertical" HorizontalAlignment="Stretch">
 
-                <TextBlock Text="Create a Theme!"  FontSize="20" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,0"></TextBlock>
-                <hc:Divider  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,10,0,0">
-
-                </hc:Divider>
+                <TextBlock Text="Create or Select a Theme!"  FontSize="20" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,0"></TextBlock>
+                <hc:Divider  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,10,0,0"></hc:Divider>
             </StackPanel>
         </StackPanel>
 
