--- a/WolvenKit/Views/Wizards/WizardPages/ThemeWizard/ThemeWizardPageView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/ThemeWizard/ThemeWizardPageView.xaml
@@ -1,36 +1,18 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.ThemeWizard.ThemeWizardPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" Initialized="UserControl_Initialized_1">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" Initialized="UserControl_Initialized_1">
 
+    <Grid VerticalAlignment="Center" Margin="0" x:Name="PageGrid" Grid.Row="1">
+        <Grid HorizontalAlignment="Center" Margin="32,5,5,5">
+            <hc:ColorPicker Name="ColorPicker" Width="250" HorizontalAlignment="Left" />
+            <Border Margin="250,0,0,0" Grid.Column="1" HorizontalAlignment="Left" Width="Auto" BorderBrush="{DynamicResource MahApps.HamburgerMenu.Pane.Background}" BorderThickness="1,1,1,1">
+                <UniformGrid Rows="10" Columns="6"  x:Name="HoneyColors">
 
-    <Grid Margin="0,65,0,0" x:Name="PageGrid" Grid.Row="1">
-
-
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="4*"/>
-        </Grid.RowDefinitions>
-
-
-        <Grid Grid.Column="0">
-            <Border CornerRadius="15" Margin="0,0,0,0"    BorderThickness="1,1,1,1">
-                <Border CornerRadius="15" Margin="0,0,0,0" Grid.Column="1"  BorderBrush="{DynamicResource RegionBrush}" BorderThickness="1,15,1,15">
-
-                    <Grid Margin="5" >
-                        <hc:ColorPicker   BorderBrush="Transparent">
-
-                        </hc:ColorPicker>
-                    </Grid>
-                </Border>
+                </UniformGrid>
             </Border>
-
         </Grid>
-
-
-
-
-
+      
     </Grid>
 
 </catel:UserControl>
