--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -31,10 +31,10 @@
                 <Setter Property="Margin" Value="5,0"/>
                 <Setter Property="Background" Value="Transparent"/>
             </Style>
-            
-            
 
 
+
+            <Geometry x:Key="HomeIcon">M886 364q31 -24 31 -64q0 -34 -24.5 -58.5t-59.5 -24.5h-41v-250q0 -35 -25 -59.5t-59 -24.5h-500q-34 0 -58.5 24.5t-24.5 59.5v250h-42q-35 0 -59 24.5t-24 58.5q0 37 29 63q63 53 163 139t169 145t70 60l27 23l28 -23q1 -1 69.5 -60t168.5 -145t162 -138zM542 -33v208 h-167v-208h167zM708 300h125q-185 155 -375 320q-190 -165 -375 -320h125v-333h125v250h250v-250h125v333z</Geometry>
 
 
 
