--- a/WolvenKit/Views/RibbonView.xaml
+++ b/WolvenKit/Views/RibbonView.xaml
@@ -26,7 +26,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <fluent:Ribbon Grid.Row="0" x:Name="ribbon">
+        <fluent:Ribbon  Grid.Row="0" x:Name="ribbon">
 
             
             <!-- StartScreen -->
@@ -43,7 +43,7 @@
             <fluent:Ribbon.Menu>
                 <fluent:Backstage  x:Name="Backstage" MouseLeftButtonDown="Backstage_MouseLeftButtonDown" >
 
-                    <fluent:BackstageTabControl SelectedContentMargin="0" x:Name="backstageTabControl"
+                    <fluent:BackstageTabControl Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" ItemsPanelBackground="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}"  SelectedContentMargin="0" x:Name="backstageTabControl"
                                                 
                     >
 
@@ -102,7 +102,7 @@
                                        Height="60"
                                         Icon="{iconPacks:Codicons Kind=NewFolder}"
                                        FontSize="18"
-                                       Command="{catel:CommandManagerBinding Application.NewProject}" >
+                                       Command="{catel:CommandManagerBinding Application.PublishMod}" >
                         </fluent:Button>
                         <fluent:SeparatorTabItem Height="Auto" Margin="20,10,20,10"/>
 
@@ -156,7 +156,7 @@
         
             
             <!-- Home Tab -->
-            <fluent:RibbonTabItem Header="Home" >
+            <fluent:RibbonTabItem Header="General" >
                 <!-- File -->
                 <fluent:RibbonGroupBox Header="File">
                     <fluent:Button Header="Open File" Command="{catel:CommandManagerBinding Application.OpenFile}">
