AssetBrowserTestFix, Home is gone from backstage. Opens by pressing home icon. THIS ALSO OPENS OTHER WINDOWS ATM FOR TESTING PURPOSES. THIS WILL BE REMOVED TY FOR READING PLS RATE 10/10 AND SUB TO MY CHANNEL. PRESS LIKE IF YOU LOVE COOKIES

--- a/WolvenKit/Views/Tools/CR2WToTextTool/CR2WToTextToolView.xaml
+++ b/WolvenKit/Views/Tools/CR2WToTextTool/CR2WToTextToolView.xaml
@@ -31,8 +31,11 @@
 
 
                     </StackPanel>
-                    <RadioButton VerticalAlignment="Center" Margin="10,0,0,0" BorderThickness="1" Style="{StaticResource RadioButtonIcon}" Content="One file per source file"/>
-                    <RadioButton VerticalAlignment="Center" Margin="10,0,0,0" BorderThickness="1" Style="{StaticResource RadioButtonIcon}" Content="Single file"/>
+                    <hc:UniformSpacingPanel HorizontalAlignment="Right" Spacing="15" Orientation="Horizontal">
+                        <RadioButton  Width="150" Margin="10,0,0,0" BorderThickness="1" Style="{StaticResource RadioButtonIcon}" Content="One file per source file"/>
+                        <RadioButton  Width="150" Margin="10,0,0,0" BorderThickness="1" Style="{StaticResource RadioButtonIcon}" Content="Single file"/>
+                    </hc:UniformSpacingPanel>
+                   
                     <hc:NumericUpDown HorizontalAlignment="Right" VerticalAlignment="Center" Width="380" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Number of Threads" Style="{StaticResource NumericUpDownPlus}" Margin="15,0,0,0"/>
                     <StackPanel HorizontalAlignment="Center" Margin="10,0,0,0" Orientation="Horizontal">
                         <hc:ComboBox  VerticalAlignment="Top" IsEditable="True" Width="450" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Source Folder"  Text="None"/>
@@ -41,6 +44,14 @@
 
 
                     </StackPanel>
+
+                    <hc:CheckComboBox  ItemsSource="{Binding DataList}" ShowClearButton="True" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" Style="{StaticResource CheckComboBoxPlus}" hc:InfoElement.Title="Dump Options" Margin="0,0,0,0" ShowSelectAllButton="True"/>
+
+                    <hc:UniformSpacingPanel HorizontalAlignment="Right" Spacing="15" Orientation="Horizontal">
+                        <RadioButton  Width="150" Margin="10,0,0,0" BorderThickness="1" Style="{StaticResource RadioButtonIcon}" Content="Overwrite Existing Files"/>
+                        <RadioButton  Width="150" Margin="10,0,0,0" BorderThickness="1" Style="{StaticResource RadioButtonIcon}" Content="Skip Existing Files"/>
+                    </hc:UniformSpacingPanel>
+                    
                 </hc:UniformSpacingPanel>
          
               
